# dominion

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: package.yml
debian/: service
email/: template.hbs
src/: config.rs  email.rs  error.rs  main.rs  watch.rs
src/notify/: discord.rs  mail.rs  mod.rs
