[package]
name = "dominion"
description = "A URL watcher that notifies you of any changes."
version = "0.1.0"
authors = ["Sandro Marques <sandro123iv@gmail.com>"]
repository = "https://github.com/SandroHc/dominion"
license = "GPL-3.0-or-later"
keywords = ["watcher"]
readme = "README.md"
edition = "2021"
include = ["/debian", "/src", "LICENSE"]

[dependencies]
async-trait = "0.1"
chrono = "0.4"
confy = "0.5"
duration-str = { version = "0.5", default-features = false, features = ["serde"] }
handlebars = { version = "4.3", optional = true }
lettre = { version = "0.10", features = ["tokio1-native-tls"], optional = true }
rand = "0.8"
regex = { version = "1.8", default-features = false, features = ["std", "perf", "unicode-gencat"] }
reqwest = { version = "0.11", features = ["json", "brotli", "deflate", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.11", default-features = false, features = ["builder", "client", "model", "gateway", "native_tls_backend"], optional = true }
similar = { version = "2.2", features = ["inline"] }
thiserror = "1.0"
tokio = { version = "1", features = ["rt", "macros", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["discord", "email"]
discord = ["dep:serenity"]
email = ["dep:lettre", "dep:handlebars"]

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1

[package.metadata.deb]
depends = "$auto"
#section = "httpd"
priority = "optional"
maintainer-scripts = "debian"
systemd-units = { }
