[package]
name = "dominion"
description = "A URL watcher that notifies you of any changes."
version = "0.1.0"
authors = ["Sandro Marques <sandro123iv@gmail.com>"]
repository = "https://github.com/SandroHc/dominion"
license = "GPL-3.0-or-later"
keywords = ["watcher"]
readme = "README.md"
edition = "2024"
include = ["/debian", "/src", "LICENSE"]

[dependencies]
async-trait = "0.1"
confy = "0.6"
duration-str = { version = "0.15", default-features = false, features = ["serde"] }
handlebars = { version = "4.3", optional = true }
lettre = { version = "0.11", features = ["tokio1-native-tls"], optional = true }
rand = "0.9"
regex = { version = "1.8", default-features = false, features = ["std", "perf", "unicode-gencat"] }
reqwest = { version = "0.12", features = ["json", "brotli", "deflate", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serenity = { version = "0.12", default-features = false, features = ["builder", "model", "native_tls_backend"], optional = true }
similar = { version = "2.2", features = ["inline"] }
thiserror = "2.0"
tokio = { version = "1", features = ["rt", "macros", "signal"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3"
directories = "6.0"

[features]
default = ["discord", "email"]
discord = ["dep:serenity"]
email = ["dep:lettre", "dep:handlebars"]

[profile.release]
lto = true
strip = "symbols"
codegen-units = 1

[package.metadata.deb]
depends = "$auto"
#section = "httpd"
priority = "optional"
maintainer-scripts = "debian"
systemd-units = { }
